2005-07-19  Benoît Dejean  <TazForEver@dlfp.org>

	* src/interface.c: (sort_bytes):
	* src/memmaps.c: (sort_guint64):
	* src/proctable.c: (sort_ints), (proctable_new):
	* src/util.h:

	Fixed column default sort order.
	Closes #310804.

2005-07-16  Benoît Dejean  <TazForEver@dlfp.org>

	* src/prettytable.c: (pretty_table_new):
	* src/procman.c: (procman_data_new):
	* src/proctable.c: (refresh_list), (proctable_free_table):

	s/g_hash_table_new (g_direct_hash, g_direct_equal)
	 /g_hash_table_new (NULL, NULL)/g.

2005-07-13  Benoît Dejean  <TazForEver@dlfp.org>

	* configure.in: post release version bump.
	
	* src/proctable.c: (proctable_update_list): Fixed division by 0 that
	may happen on fast CPU which raises SIGFPE on x86.

2005-07-13  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS: Released 2.11.5.

2005-07-13  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (cb_kill_sigstop), (cb_kill_sigcont):
	* src/callbacks.h:
	* src/interface.c: (update_sensitivity): 
	
	Provide controls to SIGSTOP and SIGCONT a process.
	Closes #147010.

2005-07-10  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (cb_app_delete), (cb_change_current_page),
	(cb_timeout):
	* src/load-graph.c: (load_graph_update), (load_graph_destroy),
	(load_graph_new), (load_graph_start), (load_graph_change_speed):
	* src/memmaps.c: (close_memmaps_dialog), (create_memmapsdata),
	(create_single_memmaps_dialog):
	* src/openfiles.c: (close_openfiles_dialog),
	(create_single_openfiles_dialog):
	* src/procactions.c: (kill_process):
	* src/procman.c: (timeouts_changed_cb), (procman_data_new):
	* src/procman.h:

	gtk_timeout_add/gtk_timeout_remove -> g_timeout_add/g_source_remove.

2005-07-09  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (cb_app_delete), (cb_change_current_page),
	(cb_update_disks), (cb_timeout):
	* src/interface.c: (create_disk_view), (create_sys_view):
	* src/load-graph.c: (load_graph_draw), (get_load), (get_memory),