@@ -1,5 +1,11 @@
 2005-07-19  Benoît Dejean  <TazForEver@dlfp.org>
 
+	* src/callbacks.c: (cb_update_disks):
+
+	Removed useless lock.
+
+2005-07-19  Benoît Dejean  <TazForEver@dlfp.org>
+
 	* src/interface.c: (sort_bytes):
 	* src/memmaps.c: (sort_guint64):
 	* src/proctable.c: (sort_ints), (proctable_new):
